# todo-api

./: .gitignore  README.md
todo-api-js/: .prettierrc  README.md  (+3 more)
todo-api-rs/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
todo-api-rs/.cargo/: config.toml
todo-api-rs/migrations/: 0001_create_Todo_table.sql  0001_create_todo_table.sql  0001_todos_table.sql  0002_create_tag_table.sql  0003_create_todo_tag_table.sql
todo-api-rs/src/: .env.example  main.rs
todo-api-rs/src/adapters/: mod.rs
todo-api-rs/src/adapters/controllers/: mod.rs  tag.rs  todo.rs
todo-api-rs/src/adapters/controllers/tag/: create.rs  delete.rs  find.rs  list.rs  list_all.rs  update.rs
todo-api-rs/src/adapters/controllers/todo/: bind_tags.rs  create.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/adapters/dtos/: mod.rs
todo-api-rs/src/adapters/dtos/tag/: create.rs  delete.rs  find.rs  list.rs  list_all.rs  mod.rs  update.rs
todo-api-rs/src/adapters/dtos/todo/: bind_tags.rs  create.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/adapters/presenters/: mod.rs  tag.rs  todo.rs
todo-api-rs/src/adapters/presenters/json/: error.rs  mod.rs  tag.rs
todo-api-rs/src/adapters/todo/: create.rs  create_input.rs  delete.rs  delete_input.rs  find.rs  find_input.rs  get_input.rs  mod.rs  store.rs  update.rs  update_input.rs
todo-api-rs/src/adapters/views/: tag.rs  todo.rs
todo-api-rs/src/app/todo/: mod.rs  store.rs
todo-api-rs/src/app/todo/functions/: create.rs  list.rs  mod.rs
todo-api-rs/src/application/: mod.rs
todo-api-rs/src/application/dto/todo/: create.rs  delete.rs  find.rs  list.rs  update.rs
todo-api-rs/src/application/dtos/tag/: create.rs  delete.rs  find.rs  list.rs  list_all.rs  mod.rs  update.rs
todo-api-rs/src/application/dtos/todo/: bind_tags.rs  create.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/application/functions/tag/: create.rs  delete.rs  find.rs  list.rs  update.rs
todo-api-rs/src/application/functions/todo/: bind_tags.rs  create.rs  delete.rs  find.rs  get.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/application/repositories/: tag.rs  todo.rs
todo-api-rs/src/application/repositories/tag/: create.rs  delete.rs  exists_all.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/application/repositories/todo/: bind_tags.rs  create.rs  delete.rs  exists.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/application/use_cases/tag/: create.rs  delete.rs  find.rs  list.rs  list_all.rs  mod.rs  update.rs
todo-api-rs/src/application/use_cases/todo/: bind_tags.rs  create.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
todo-api-rs/src/core/todo/: models.rs
todo-api-rs/src/core/todo/handlers/: create.rs  list.rs
todo-api-rs/src/domain/: mod.rs  todo.rs  use_case.rs
todo-api-rs/src/domain/entities/: mod.rs  tag.rs  todo.rs
todo-api-rs/src/domain/types/: date.rs  id.rs  mod.rs
todo-api-rs/src/framework/: mod.rs  store.rs
todo-api-rs/src/framework/rest_api/: error.rs  errors.rs  mod.rs
todo-api-rs/src/framework/rest_api/extractors/: mod.rs  string.rs
todo-api-rs/src/framework/storage/: mod.rs
(+184 files in other folders)
