[package]
name = "todo-api-rs"
version = "0.1.0"
edition = "2021"


[profile.release]
# strip symbols from linux executables
strip = true
# better link optimization, but slower builds
lto = true

[dependencies]
# service framework
axum = { version = "0.6.19", features = ["macros"] }

# async runtime
tokio = { version = "1.29.1", features = ["full"] }

# serialization/deserialization
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

# database
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "time",
] }

# tracing aka logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# middlewares
tower-http = { version = "0.4.4", features = ["trace"] }

# utils
async-trait = "0.1.72"
dotenv = "0.15.0"

[dependencies.uuid]
version = "^1.4.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.time]
version = "^0.3"
features = ["macros", "parsing"]
