[package]
name = "todo-api-rs"
version = "0.0.1"
edition = "2021"


[profile.release]
# strip symbols from linux executables
strip = true
# better link optimization, but slower builds
lto = true

[dependencies]
# service framework
axum = { version = "0.7.2", features = ["macros"] }

# async runtime
tokio = { version = "1.32.0", features = ["full"] }

# serialization/deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# database
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "time",
] }

# tracing aka logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# middlewares
tower-http = { version = "0.5", features = ["trace", "cors"] }

# utils
async-trait = "0.1.72"
dotenvy = "0.15.7"
time = { version = "0.3", features = ["macros", "parsing"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0.51"
