[package]
name = "todo-api-rs"
version = "0.0.1"
edition = "2021"


[profile.release]
# strip symbols from linux executables
strip = true
# better link optimization, but slower builds
lto = true

[dependencies]
# service framework
axum = { version = "0.7", features = ["macros"] }

# async runtime
tokio = { version = "1.35", features = ["full"] }

# serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# database
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "time",
] }

# tracing aka logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# middlewares
tower-http = { version = "0.5", features = ["trace", "cors"] }

# utils
dotenvy = "0.15"
time = { version = "0.3", features = ["macros", "parsing", "serde"] }
uuid = { version = "1.7", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
thiserror = "1.0"
